2017-05-10: Oversiktsside for hvert prosjekt (dugnad)
2017-05-04: Økte størrelsen på lokalitetsfeltet (Karplanter Telemark)
2017-05-04: La til to nye felter - høyde over havet og innsamlernummer (Karplanter Telemark)