@@ -27,19 +27,5 @@ $def with(changes)
       <h3>Transkribering: Karplanter fra Telemark</h3>
     </a>
   </article>
-
-  <article>
-    <a href='/dugnad/project/telemark/info'>
-      <img src='/static/images/telemark.jpg'>
-      <h3>Transkribering: Karplanter fra Telemark</h3>
-    </a>
-  </article>
-
-  <article>
-    <a href='/dugnad/project/telemark/info'>
-      <img src='/static/images/telemark.jpg'>
-      <h3>Transkribering: Karplanter fra Telemark</h3>
-    </a>
-  </article>
 </section>
 
